# CloudGuard

./: .gitignore  README.md  pyproject.toml  setup.py
cloudguard/: cli.py
cloudguard/api/: client.js  package.json  server.js
cloudguard/cloudguard/: cli.py
cloudguard/cloudguard/services/: ec2_services.py  s3_service.py
cloudguard/services/: __init__.py
src/aws_security_scanner/: __init__.py
src/aws_security_scanner/checks/: ec2.py  iam.py  s3.py
src/aws_security_scanner/core/: __init__.py  engine.py  framework.py  output.py  provider.py  registry.py
